fix: rewrite process execute #6